<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".ChangePassword">

    <FrameLayout
        android:layout_width="327dp"
        android:layout_height="526dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/changePassword_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="50dp"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20dp"
            android:text="@string/new_password"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/stronPassword_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="65dp"
            android:text="@string/create_a_strong_password"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/newPassword_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/new_password_password"/>

        <EditText
            android:id="@+id/confirmPassword_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"/>

        <Button
            android:id="@+id/btn_savePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="470dp"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="10dp"
            android:text="@string/save_password" />

        <TextView
            android:id="@+id/skipChangePassword_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="480dp"
            android:layout_marginEnd="250dp"
            android:layout_marginStart="30dp"
            android:text="@string/skipp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="18sp"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>