<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AdPlantV">

    <FrameLayout
        android:id="@+id/content_addplant"
        android:layout_width="415dp"
        android:layout_height="729dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-4dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/text_namePlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_the_name"/>

        <EditText
            android:id="@+id/text_typePlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_the_type" />

        <EditText
            android:id="@+id/text_datePlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_the_date"/>

        <EditText
            android:id="@+id/text_sizePlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_the_size"/>

        <TextView
            android:id="@+id/txtNotePlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="Check the plants"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btnAdd"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="650dp"
            android:layout_marginStart="330dp"
            android:onClick="AddPlant"
            android:background="@drawable/bottom_circle"
            android:backgroundTint="@color/teal_700"
            android:src="@drawable/ic_baseline_add_24" />

        <Button
            android:id="@+id/btn_showPlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="430dp"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/show_plant"
            android:onClick="showPlant"/>

        <Button
            android:id="@+id/btn_updatePlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="430dp"
            android:layout_marginStart="230dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/update_plant"
            android:onClick="updatePlant"/>

        <Button
            android:id="@+id/btn_deletePlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:layout_marginStart="140dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/delete_plant"
            android:onClick="deletePlant"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>