<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".RecoverAccount">

    <FrameLayout
        android:layout_width="343dp"
        android:layout_height="367dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/recoverAccount_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="50dp"
            android:text="@string/recover_your_account"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="20dp"
            android:text="@string/recover_email"
            android:textSize="18sp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/recoverAccount_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btn_searchAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="310dp"
            android:layout_marginStart="210dp"
            android:layout_marginEnd="20dp"
            android:text="@string/search"
            android:onClick="toSecurityCode"/>

        <Button
            android:id="@+id/btn_cancelAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="310dp"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="150dp"
            android:text="@string/cancel"
            android:onClick="toLogin"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>